objects/ASI_CRM_DTF__c.object
<CustomObject>
    <description>CN - Digital Initiatives Application Form</description>
    <fields>
        <fullName>ASI_CRM_CN_3rd_parties__c</fullName>
        <inlineHelpText>Recommendation for agencies / 3rd parties</inlineHelpText>
        <label>Recommendation for agencies/3rd parties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Annual_Maintenance_RMB__c</fullName>
        <label>Annual Maintenance(RMB)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Default value is creation date</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ConsumerOtherContent__c</fullName>
        <label>-</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ConsumerOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Consumer__c</fullName>
        <label>Consumer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CustomerOtherContent__c</fullName>
        <label>-</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CustomerOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Data_Capture_Mechanism__c</fullName>
        <label>Data Capture Mechanism</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Data_Collection__c</fullName>
        <label>Data Collection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>digital</fullName>
                </value>
                <value>
                    <fullName>manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Department__c</fullName>
        <description>create by department from profile cannot change</description>
        <formula>CreatedBy.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Developer_Supplier_Name__c</fullName>
        <label>Developer：Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Duration_Detail__c</fullName>
        <label>Duration Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_E_commerce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>E-commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Elements_of_backgroundContext__c</fullName>
        <label>Elements of background/Context</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_EmployeeOtherContent__c</fullName>
        <label>-</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_EmployeeOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Estimated_Investment_RMB__c</fullName>
        <label>Estimated Investment(RMB)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Function_Informed__c</fullName>
        <inlineHelpText>Suggested function(s) to be involved / informed</inlineHelpText>
        <label>Function(s) to be involved/informed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Gaming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>Gaming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_IT_Technical_advice__c</fullName>
        <label>IT Technical advice</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Idea_Description__c</fullName>
        <label>Idea Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Improve_Awareness_Affinity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Improve Awareness/Affinity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Improve_Customer_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Improve Customer Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Improve_Employee_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Improve Employee Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Improve_Online_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Improve Online Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Improve_eCRM_Loyalty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Improve eCRM/Loyalty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Integrate_Leverage__c</fullName>
        <inlineHelpText>Any known existing initiatives with opportunity to integrate/leverage?</inlineHelpText>
        <label>Existing initiatives to Intergrate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Internal_Employee__c</fullName>
        <label>Internal Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Legal_advice__c</fullName>
        <label>Legal advice</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Maintenance_Supplier_Name__c</fullName>
        <label>Maintenance: Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Measurements__c</fullName>
        <inlineHelpText>How will you measure success</inlineHelpText>
        <label>Success Measurements KPI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ObjectivesAchievements__c</fullName>
        <inlineHelpText>What are the project&apos;s objectives and expected achievements?</inlineHelpText>
        <label>Objectives and Expected Achievements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Optimize_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimize Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Other_Remarks__c</fullName>
        <label>Other Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Overall_comment__c</fullName>
        <label>Overall comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Planned_Launch_Date__c</fullName>
        <label>Planned Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Project_Duration__c</fullName>
        <label>Project Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One off</fullName>
                </value>
                <value>
                    <fullName>On-going</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Project_Target_Stakeholder__c</fullName>
        <label>Project Target Stakeholder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Internal Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_QR_code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>QR code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Require_Support__c</fullName>
        <inlineHelpText>Do you require any one on one support with this application?</inlineHelpText>
        <label>Require Support or Not</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending for Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SysApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTF_SysApprover1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SysApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTF_SysApprover2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SysApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTF_SysApprover3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Title__c</fullName>
        <description>create by title from profile cannot change</description>
        <formula>CreatedBy.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Wechat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User needs to check one in this section</description>
        <label>Wechat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Weibo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weibo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_autoApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check is approve or not</description>
        <label>Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <label>Digital Initiatives Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Project_Name__c</columns>
        <columns>ASI_CRM_CN_Application_Date__c</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DTF-{00000000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Initiatives Forms</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_DTF_ReadOnly</fullName>
        <active>true</active>
        <label>CRM CN DTF Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_DTF_Standard</fullName>
        <active>true</active>
        <label>CRM CN DTF Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_checkContent</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_CN_ConsumerOther__c&amp;&amp;ASI_CRM_CN_ConsumerOtherContent__c==&apos;&apos; || ASI_CRM_CN_CustomerOther__c&amp;&amp;ASI_CRM_CN_CustomerOtherContent__c==&apos;&apos; || ASI_CRM_CN_EmployeeOther__c&amp;&amp;ASI_CRM_CN_EmployeeOtherContent__c==&apos;&apos;</errorConditionFormula>
        <errorMessage>Needs to input the content</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_checkPlatform</fullName>
        <active>true</active>
        <description>Check Project Platform Selection</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;ASI_CRM_CN_DTF_Standard&apos;&amp;&amp;NOT(ASI_CRM_CN_Website__c)&amp;&amp;NOT(ASI_CRM_CN_App__c)&amp;&amp;NOT(ASI_CRM_CN_Wechat__c)&amp;&amp;NOT(ASI_CRM_CN_Gaming__c)&amp;&amp;NOT(ASI_CRM_CN_Other__c)&amp;&amp;NOT(ASI_CRM_CN_Weibo__c)&amp;&amp;NOT(ASI_CRM_CN_E_commerce__c)&amp;&amp;NOT(ASI_CRM_CN_Search__c)&amp;&amp;NOT(ASI_CRM_CN_QR_code__c)</errorConditionFormula>
        <errorMessage>User needs to check one in Project Platform Selection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_checkPurpose</fullName>
        <active>false</active>
        <description>Check Project Target Stakeholder and Purpose Section</description>
        <errorConditionFormula>ASI_CRM_CN_Consumer__c==&apos;&apos;&amp;&amp;NOT(ASI_CRM_CN_Improve_Awareness_Affinity__c)&amp;&amp;NOT(ASI_CRM_CN_Improve_Online_Sales__c)&amp;&amp;NOT(ASI_CRM_CN_Improve_eCRM_Loyalty__c)&amp;&amp;NOT(ASI_CRM_CN_ConsumerOther__c)&amp;&amp;ASI_CRM_CN_Customer__c==&apos;&apos;&amp;&amp;NOT(ASI_CRM_CN_Improve_Customer_Service__c)&amp;&amp;NOT(ASI_CRM_CN_CustomerOther__c)&amp;&amp;ASI_CRM_CN_Internal_Employee__c==&apos;&apos;&amp;&amp;NOT(ASI_CRM_CN_Improve_Employee_Service__c)&amp;&amp;NOT(ASI_CRM_CN_Optimize_Workflow__c)&amp;&amp;NOT(ASI_CRM_CN_EmployeeOther__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_CN_ConsumerOtherContent__c</errorDisplayField>
        <errorMessage>User needs to check one in Project Target Stakeholder and Purpose</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_checkPurpose2</fullName>
        <active>true</active>
        <description>Check Project Target Stakeholder and Purpose Section</description>
        <errorConditionFormula>OR((ISPICKVAL( ASI_CRM_CN_Project_Target_Stakeholder__c, &apos;Consumer&apos;) &amp;&amp; ASI_CRM_CN_Consumer__c == &apos;&apos;) &amp;&amp; (( NOT(ASI_CRM_CN_Improve_Awareness_Affinity__c) &amp;&amp; NOT(ASI_CRM_CN_Improve_Online_Sales__c) &amp;&amp; NOT(ASI_CRM_CN_Improve_eCRM_Loyalty__c) &amp;&amp; NOT(ASI_CRM_CN_ConsumerOther__c) &amp;&amp; ISBLANK(TEXT(ASI_CRM_CN_Data_Collection__c))) || ( ASI_CRM_CN_Improve_Customer_Service__c || ASI_CRM_CN_Improve_Employee_Service__c || ASI_CRM_CN_Optimize_Workflow__c ) || (( ASI_CRM_CN_Improve_Awareness_Affinity__c || ASI_CRM_CN_Improve_Online_Sales__c || ASI_CRM_CN_Improve_eCRM_Loyalty__c || NOT(ISBLANK(TEXT(ASI_CRM_CN_Data_Collection__c))) ) &amp;&amp; ASI_CRM_CN_ConsumerOther__c )), 


(ISPICKVAL( ASI_CRM_CN_Project_Target_Stakeholder__c, &apos;Customer&apos;) &amp;&amp; ASI_CRM_CN_Customer__c == &apos;&apos;) &amp;&amp; (( NOT(ASI_CRM_CN_Improve_Customer_Service__c) &amp;&amp; NOT(ASI_CRM_CN_ConsumerOther__c)) || ( ASI_CRM_CN_Improve_Awareness_Affinity__c || ASI_CRM_CN_Improve_Online_Sales__c || ASI_CRM_CN_Improve_eCRM_Loyalty__c || ASI_CRM_CN_Improve_Employee_Service__c || ASI_CRM_CN_Optimize_Workflow__c || NOT(ISBLANK(TEXT(ASI_CRM_CN_Data_Collection__c))) ) || ( ASI_CRM_CN_Improve_Customer_Service__c &amp;&amp; ASI_CRM_CN_ConsumerOther__c )), 


(ISPICKVAL( ASI_CRM_CN_Project_Target_Stakeholder__c, &apos;Internal Employee&apos;) &amp;&amp; ASI_CRM_CN_Internal_Employee__c == &apos;&apos;) &amp;&amp; (( NOT(ASI_CRM_CN_Improve_Employee_Service__c) &amp;&amp; NOT(ASI_CRM_CN_Optimize_Workflow__c) &amp;&amp; NOT(ASI_CRM_CN_ConsumerOther__c)) || ( ASI_CRM_CN_Improve_Awareness_Affinity__c || ASI_CRM_CN_Improve_Online_Sales__c || ASI_CRM_CN_Improve_eCRM_Loyalty__c || ASI_CRM_CN_Improve_Customer_Service__c || NOT(ISBLANK(TEXT(ASI_CRM_CN_Data_Collection__c)))) || (( ASI_CRM_CN_Improve_Employee_Service__c || ASI_CRM_CN_Optimize_Workflow__c ) &amp;&amp; ASI_CRM_CN_ConsumerOther__c )))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_CN_Project_Target_Stakeholder__c</errorDisplayField>
        <errorMessage>User needs to check the corresponding Project Purpose or Other</errorMessage>
    </validationRules>
</CustomObject>